# pasta

./: .gitignore  Cargo.toml  LICENSE  README.md  holidays.csv
.github/workflows/: release_library.yml
pasta/: Cargo.toml
pasta-lib/: CHANGELOG.md  Cargo.toml  README.md  package.json  publish.sh
pasta-lib/.changeset/: beige-lamps-exercise.md  loud-drinks-occur.md  moody-turkeys-punch.md  polite-apricots-design.md  red-cows-remember.md  smooth-kings-suffer.md
pasta-lib/data/: holidays.csv
pasta-lib/src/: lib.rs
pasta/src/: main.rs
src/: holiday_record.rs  lib.rs  main.rs
