[package]
name = "pasta"
version = "0.1.0"
authors = ["[Ewan Breakey s3845382] <s3845382@student.rmit.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
